Full images are now set as background for better copy protection. Prevented being able to "scroll" to the right on mobile devices.

--- a/PM_Basic/css/pm_basic.css
+++ b/PM_Basic/css/pm_basic.css
@@ -69,11 +69,6 @@ table {
     border-radius: 6px;
 }
 
-#mainbody img.thumb {
-    opacity: 0;
-    filter: alpha(opacity=0); /* IE */
-}
-
 #mainbody td {
     background-repeat: no-repeat;
     background-position: center;
@@ -140,6 +135,7 @@ table {
     width: 80px;
     padding: 0;
     vertical-align: bottom;
+    background-size: cover;
 }
 
 #fullimagetitle_1, #fullimagetitle_0, #fullimagetitle_2 {
